<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp" android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/title"
            />

    <TextView
            android:id="@+id/title"
            android:padding="5dp"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/icon"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Title"
            android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/description"
            android:layout_width="0dp" android:layout_height="wrap_content"
              app:layout_constraintStart_toEndOf="@+id/icon" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/title"
              tools:text="Description"
              android:textColor="#555555"
              android:padding="2dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    <ImageView
            android:id="@+id/image"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:adjustViewBounds="true" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>