<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2013 APPNEXUS INC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/close"
            android:contentDescription="@string/an_close_browser"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/browser_back"
            android:contentDescription="@string/back"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_weight="2"/>
        <ImageButton
            android:id="@+id/browser_forward"
            android:contentDescription="@string/forward"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_media_play"/>

        <ImageButton
            android:id="@+id/browser_refresh"
            android:contentDescription="@string/refresh"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_rotate"/>

        <ImageButton
            android:id="@+id/open_browser"
            android:contentDescription="@string/open_browser"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_set_as"/>

    </LinearLayout>


    <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_below="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:progressDrawable="@drawable/progress"
            android:minHeight="4dp"
            android:maxHeight="4dp"
            />
    <WebView
            android:id="@+id/web_view"
            android:layout_above="@+id/bar"
            android:layout_below="@id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    <View android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_alignParentBottom="true"
          android:id="@id/bar"
          android:background="@android:color/darker_gray" />

</RelativeLayout>